--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,7 @@
 {
-  "extends": "next/core-web-vitals",
+  "plugins": ["tailwindcss"],
+  "extends": ["next/core-web-vitals", "plugin:tailwindcss/recommended"],
   "rules": {
-    "react/no-unescaped-entities": "off",
-    "@next/next/no-page-custom-font": "off"
+    "tailwindcss/no-custom-classname": "off"
   }
 }
